<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".EtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgEtapeReturn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:contentDescription="@string/icone_frais_etape"
                app:srcCompat="@android:drawable/sym_def_app_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTitleLogin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:gravity="start|center"
                android:lines="2"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/title_login"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="30dp">

        <EditText
            android:id="@+id/txtUtilisateur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/user"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/txtMdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/pass"
            android:paddingLeft="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/cmdLoginValider"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/synchroniser" />

    </LinearLayout>
</LinearLayout>
